Task 7 - VPC with public and private subnet/security_group.tf

resource "aws_security_group" "sanyam-security-group-vpc" {
  name        = "san-security-g"
  description = "security group"
  vpc_id = aws_vpc.practicing_vpc.id
   
  ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    "Name" = "sanyam_security_group"
    "Owner" = "sanyam.rathore@cloudeq.com"
    "Purpose" = "training"
  }
}
